# Gartic-Draw-Bot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/ui/: controllers.rs  mod.rs  ui.rs
src/utils/: image_drawing.rs  image_utils.rs  mod.rs  save_coordinates.rs
